Adding endpoint for DocumentDetails
